<resources>
    <string name="app_name">Who\'s That Pokémon?</string>
    <string name="title_game">Game</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_settings">Settings</string>
    <string name="pokemon_image">Pokémon Image</string>
    <string name="hint">Enter the Pokémon\'s name</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="skip">Skip</string>
    <string name="items_title">Players</string>
    <string name="name_title">Name</string>
    <string name="points_title">Points</string>
    <string name="player">Select Player</string>
    <string name="pick_a_player">Please select a player from the drop-down list below then hit \"New Game\"</string>
    <string name="who_is_this_pokemon">Who\'s This Pokémon?</string>
    <string name="add_player">Add Player</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="players">PLAYERS</string>
</resources>